--- a/pag2.css
+++ b/pag2.css
@@ -24,7 +24,8 @@ a{text-decoration: none;
      background-color: rgba(222, 184, 135, 0.582);
      border-radius:15px ;
      padding: 10px;
-     width: 80px;} 
+     width: 80px;
+        height: 30px;} 
      footer{background-color: transparent;
         position: absolute; 
         left: 20%;    
