--- a/pag3.css
+++ b/pag3.css
@@ -16,11 +16,15 @@ a{text-decoration: none;
      background-color: rgba(222, 184, 135, 0.582);
      border-radius:15px ;
      padding: 10px;
-     width: 80px;} 
+     width: 80px;
+     height: 20px;   } 
      footer{background-color: transparent;
         position: absolute; 
-        right:15%;    
-        top: 88%;}
+        right:25%;    
+        top: 88%;
+        
+        text-align: center;
+        }
         a:hover{background-color: rgb(228, 182, 98);
             border-radius: 10px; 
             color: black;  
