--- a/pag5.css
+++ b/pag5.css
@@ -14,7 +14,8 @@ a{text-decoration: none;
      background-color: rgba(222, 184, 135, 0.582);
      border-radius:15px ;
      padding: 10px;
-     width: 80px;} 
+     width: 80px;
+     height: 20px;   } 
 footer{background-color: transparent;
         position: absolute; 
         left: 18%;    
