--- a/pag6.css
+++ b/pag6.css
@@ -75,7 +75,7 @@ html, body {
     border-radius: 15px;
     padding: 10px;
     width: 80px;
-  }
+    height: 20px;}
 
   a:hover {
     background-color: rgb(228, 182, 98);
