--- a/pag7.css
+++ b/pag7.css
@@ -37,7 +37,8 @@ body {
     background-color: rgba(222, 184, 135, 0.582);
     border-radius: 15px;
     padding: 10px;
-    width: 80px;
+    width: 90px;
+    height: 40px;
   }
   
   a:hover {
@@ -56,10 +57,55 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: white;
+    background-color: transparent;
     border-radius: 10px;
   }
   
+  .t1:hover{background-color: rgba(255, 127, 80, 0.911);
+            box-shadow:inset 2px 2px 15px rgb(179, 59, 59), 2px 2px 15px rgb(185, 70, 70);
+            transform: scale(1.2);
+            transition: 1s transform linear;}
+  .t2:hover{background-color: coral;
+    box-shadow:inset 2px 2px 15px rgb(179, 59, 59), 2px 2px 15px rgb(185, 70, 70);
+    transform: scale(1.2);
+    transition: 1s transform linear;}
+  
+  .t3:hover{background-color: coral;
+    box-shadow:inset 2px 2px 15px rgb(179, 59, 59), 2px 2px 15px rgb(185, 70, 70);
+    transform: scale(1.2);
+    transition: 1s transform linear;}
+
+  .t4:hover{background-color: coral;
+    box-shadow:inset 2px 2px 15px rgb(179, 59, 59), 2px 2px 15px rgb(185, 70, 70);
+    transform: scale(1.2);
+    transition: 1s transform linear;}
+
+  .t5:hover{background-color: coral;
+    box-shadow:inset 2px 2px 15px rgb(179, 59, 59), 2px 2px 15px rgb(185, 70, 70);
+    transform: scale(1.2);
+    transition: 1s transform linear;}
+  .t6:hover{background-color: rgb(255, 127, 80);
+    box-shadow:inset 2px 2px 15px rgb(179, 59, 59), 2px 2px 15px rgb(185, 70, 70);
+    transform: scale(1.2);
+    transition: 1s transform linear;
+    /*animation: girar 10s linear infinite;*/
+}
+
+
+
+    @keyframes girar {
+      from {
+        transform: rotate(0deg);
+      }
+      to {
+        transform: rotate(360deg); /* sentido horário */
+      }
+    }
+    
+
+
+
+
   .galeria {
     display: flex;
     flex-wrap: wrap; /* Quebra em linhas */
@@ -77,9 +123,7 @@ body {
   }
 
 
-
-
-
+ 
 
 
 
